Fix cover alignment when song info text is looong

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -196,7 +196,6 @@ h1 {
         border-radius: 10px;
         width: 25vw;
         height: 25vw;
-        margin-right: 16px;
     }
 }
 
