--- a/src/styles/largeUI.scss
+++ b/src/styles/largeUI.scss
@@ -15,7 +15,7 @@
     }
     .song-info {
         display: grid;
-        justify-content: center;
+        justify-items: center;
         text-align: center;
         align-content: center;
         height: 100vh;
